# riina

./: .CumulativeRelation_FIXED.aux  .ProofInfrastructure.aux  .dockerignore  .gitignore  .lia.cache  AUDIT_REPORT_2026_02_06.md  AUTHORS  AXIOMS.md  AXIOM_ATTACK_PLAN.md  AXIOM_ELIMINATION_PLAN.md  AXIOM_THREAT_MAP_v1_0_0.md  BLOCKER_ANALYSIS_COQ_INSTALLATION.md  BREAKER_AXIOM_ATTACK_REPORT.md  BREAKER_FULL_CODEBASE_ATTACK.md  BREAKER_ZERO_ADMIT_AUDIT.md  CHANGELOG.md  CHANGELOG.md.bak  CHATGPT_PROMPTS_READY_TO_USE.md  CHATGPT_PROOF_ELIMINATION_MASTER_STRATEGY_v1_0_0.md  CLAUDE.md  CLAUDE_EXECUTION_PLAN.md  CLAUDE_EXECUTION_PLAN_PROMPT.md  CODEBASE_ASSESSMENT_2026-01-16.md  CODE_OF_CONDUCT.md  COMMIT_PROTOCOL.md  CONTRIBUTING.md  CURRENT_STATUS.md  DELEGATION_PROMPTS.md  DEPLOY_PROTOCOL.md  Dockerfile  LICENSE  Makefile  PROGRESS.md  PROGRESS_TEMPLATE.md  PROOF_STATUS.md  README.md  REPO_PROTECTION_GUIDE.md  RESEARCH_STATUS_AUDIT.md  RESEARCH_VS_PROOFS_ALIGNMENT_AUDIT.md  RESUMPTION_GUIDE.md  (+15 more)
03_PROTO/: Cargo.toml
03_PROTO/crates/riina-arena/: Cargo.toml
03_PROTO/crates/riina-arena/src/: lib.rs
03_PROTO/crates/riina-codegen/: Cargo.toml
03_PROTO/crates/riina-codegen/src/: android_build.rs  backend.rs  builtins.rs  emit.rs  ffi.rs  interp.rs  ios_build.rs  ir.rs  jni.rs  lib.rs  lower.rs  mobile.rs  platform.rs  swift_bridge.rs  toolchain.rs  value.rs  wasm.rs  wasm_encode.rs
03_PROTO/crates/riina-codegen/src/builtins/: fail.rs  json.rs  masa.rs  matematik.rs  mod.rs  penukaran.rs  peta.rs  senarai.rs  set.rs  teks.rs  ujian.rs
03_PROTO/crates/riina-compliance/: Cargo.toml
03_PROTO/crates/riina-compliance/src/: lib.rs  report.rs  rules.rs  tests.rs  validator.rs
03_PROTO/crates/riina-doc/: Cargo.toml
03_PROTO/crates/riina-doc/src/: lib.rs
03_PROTO/crates/riina-fmt/: Cargo.toml
03_PROTO/crates/riina-fmt/src/: lib.rs
03_PROTO/crates/riina-lexer/: Cargo.toml
03_PROTO/crates/riina-lexer/src/: error.rs  lexer.rs  lib.rs  token.rs
03_PROTO/crates/riina-lsp/: Cargo.toml
03_PROTO/crates/riina-lsp/src/: analysis.rs  json.rs  jsonrpc.rs  lib.rs  server.rs
03_PROTO/crates/riina-parser/: Cargo.toml
03_PROTO/crates/riina-parser/src/: lib.rs  tests.rs
03_PROTO/crates/riina-pkg/: Cargo.toml
03_PROTO/crates/riina-pkg/src/: build.rs  cache.rs  cli.rs  effects.rs  error.rs  integrity.rs  layout.rs  lib.rs  lockfile.rs  manifest.rs  registry.rs  resolve.rs  version.rs  workspace.rs
03_PROTO/crates/riina-span/: Cargo.toml
03_PROTO/crates/riina-span/src/: diagnostics.rs  lib.rs
03_PROTO/crates/riina-symbols/: Cargo.toml
03_PROTO/crates/riina-symbols/src/: lib.rs
03_PROTO/crates/riina-typechecker/: Cargo.toml
03_PROTO/crates/riina-typechecker/src/: lib.rs  tests.rs
03_PROTO/crates/riina-types/: Cargo.toml
03_PROTO/crates/riina-types/src/: lib.rs
03_PROTO/crates/riina-wasm/: Cargo.toml
03_PROTO/crates/riina-wasm/src/: lib.rs
03_PROTO/crates/riinac/: Cargo.toml
03_PROTO/crates/riinac/src/: diagnostics.rs  main.rs  mcp.rs  repl.rs  verify.rs
03_PROTO/crates/teras-lang-codegen/: Cargo.toml
03_PROTO/crates/teras-lang-lexer/: Cargo.toml
03_PROTO/crates/teras-lang-lexer/src/: error.rs  lexer.rs  lib.rs  token.rs
03_PROTO/crates/teras-lang-parser/: Cargo.toml
03_PROTO/crates/teras-lang-parser/src/: lib.rs  tests.rs
03_PROTO/crates/teras-lang-typechecker/: Cargo.toml
03_PROTO/crates/teras-lang-typechecker/src/: lib.rs  tests.rs
03_PROTO/crates/teras-lang-types/: Cargo.toml
03_PROTO/crates/teras-lang-types/src/: lib.rs
03_PROTO/crates/terasc/: Cargo.toml
03_PROTO/crates/terasc/src/: main.rs
05_TOOLING/: Cargo.toml  rust-toolchain.toml  test_inversion  test_inversion.rs
05_TOOLING/ada/: gnatprove.adc  riina.gpr  teras.gpr
05_TOOLING/ada/src/: riina.ads  teras.ads
05_TOOLING/ada/src/crypto/: riina-crypto-aes.ads  riina-crypto.ads  teras-crypto-aes.ads  teras-crypto.ads
05_TOOLING/crates/riina-build/: Cargo.toml
05_TOOLING/crates/riina-build/src/: main.rs
05_TOOLING/crates/riina-core/: Cargo.toml
05_TOOLING/crates/riina-core/src/: constant_time.rs  lib.rs  secret.rs  zeroize.rs
05_TOOLING/crates/riina-effect/: Cargo.toml
05_TOOLING/crates/riina-effect/src/: capability.rs  effect_gate.rs  lib.rs
05_TOOLING/crates/riina-lang-codegen/: Cargo.toml
05_TOOLING/crates/riina-lang-codegen/src/: lib.rs
05_TOOLING/crates/riina-lang-lexer/: Cargo.toml
05_TOOLING/crates/riina-lang-lexer/src/: lib.rs
05_TOOLING/crates/riina-lang-parser/: Cargo.toml
05_TOOLING/crates/riina-lang-parser/src/: lib.rs
05_TOOLING/crates/riina-lang-types/: Cargo.toml
05_TOOLING/crates/riina-lang-types/src/: lib.rs
05_TOOLING/crates/riina-verify/: Cargo.toml
05_TOOLING/crates/riina-verify/src/: main.rs
05_TOOLING/crates/riinac/: Cargo.toml
05_TOOLING/crates/riinac/src/: main.rs
05_TOOLING/crates/teras-build/: Cargo.toml
05_TOOLING/crates/teras-build/src/: main.rs
05_TOOLING/crates/teras-core/: Cargo.toml
05_TOOLING/crates/teras-core/src/: constant_time.rs  lib.rs  secret.rs  zeroize.rs
05_TOOLING/crates/teras-effect/: Cargo.toml
05_TOOLING/crates/teras-effect/src/: lib.rs
05_TOOLING/crates/teras-lang-codegen/: Cargo.toml
05_TOOLING/crates/teras-lang-codegen/src/: lib.rs
05_TOOLING/crates/teras-lang-lexer/: Cargo.toml
05_TOOLING/crates/teras-lang-lexer/src/: lib.rs
05_TOOLING/crates/teras-lang-parser/: Cargo.toml
05_TOOLING/crates/teras-lang-parser/src/: lib.rs
05_TOOLING/crates/teras-lang-types/: Cargo.toml
05_TOOLING/crates/teras-lang-types/src/: lib.rs
05_TOOLING/crates/teras-verify/: Cargo.toml
05_TOOLING/crates/teras-verify/src/: main.rs
05_TOOLING/crates/terasc/: Cargo.toml
05_TOOLING/crates/terasc/src/: main.rs
05_TOOLING/docker/: Dockerfile.dev
05_TOOLING/scripts/: verify.sh
05_TOOLING/tools/: verify_integrity.sh
05_TOOLING/tools/artifact-sign/: Cargo.toml
05_TOOLING/tools/artifact-sign/src/: main.rs
05_TOOLING/tools/build-manifest/: Cargo.toml
05_TOOLING/tools/build-manifest/src/: main.rs
05_TOOLING/tools/hash-chain/: Cargo.toml
05_TOOLING/tools/hash-chain/src/: main.rs
(+3733 files in other folders)
