# TERAS-LANG Prototype Workspace
# Track B: Compiler Implementation

[workspace]
resolver = "2"
members = [
    "crates/teras-lang-lexer",
    "crates/teras-lang-parser",
    "crates/teras-lang-types",
    "crates/teras-lang-codegen",
    "crates/terasc",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.84.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ib823/proof"

[workspace.dependencies]
# Internal dependencies
teras-lang-lexer = { path = "crates/teras-lang-lexer" }
teras-lang-parser = { path = "crates/teras-lang-parser" }
teras-lang-types = { path = "crates/teras-lang-types" }
teras-lang-codegen = { path = "crates/teras-lang-codegen" }

# No external dependencies (Law 8)

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
