# RIINA Prototype Workspace
# Track B: Compiler Implementation
# RIINA = Rigorous Immutable Integrity No-attack Assured
# Named for: Reena + Isaac + Imaan

[workspace]
resolver = "2"
members = [
    "crates/riina-codegen",
    "crates/riina-lexer",
    "crates/riina-parser",
    "crates/riina-typechecker",
    "crates/riina-types",
    "crates/riinac",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.84.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ib823/proof"

[workspace.dependencies]
# Internal dependencies
riina-lexer = { path = "crates/riina-lexer" }
riina-parser = { path = "crates/riina-parser" }
riina-types = { path = "crates/riina-types" }
riina-codegen = { path = "crates/riina-codegen" }
riina-typechecker = { path = "crates/riina-typechecker" }

# No external dependencies (Law 8)

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
