# RIINA Prototype Workspace
# Track B: Compiler Implementation
# RIINA = Rigorous Immutable Invariant — Normalized Axiom

[workspace]
resolver = "2"
members = [
    "crates/riina-arena",
    "crates/riina-codegen",
    "crates/riina-doc",
    "crates/riina-fmt",
    "crates/riina-lexer",
    "crates/riina-lsp",
    "crates/riina-parser",
    "crates/riina-span",
    "crates/riina-symbols",
    "crates/riina-typechecker",
    "crates/riina-types",
    "crates/riinac",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.84.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ib823/proof"

[workspace.dependencies]
# Internal dependencies - Foundation crates (P0)
riina-arena = { path = "crates/riina-arena" }
riina-span = { path = "crates/riina-span" }
riina-symbols = { path = "crates/riina-symbols" }

# Internal dependencies - Compiler crates
riina-lexer = { path = "crates/riina-lexer" }
riina-parser = { path = "crates/riina-parser" }
riina-types = { path = "crates/riina-types" }
riina-codegen = { path = "crates/riina-codegen" }
riina-doc = { path = "crates/riina-doc" }
riina-fmt = { path = "crates/riina-fmt" }
riina-lsp = { path = "crates/riina-lsp" }
riina-typechecker = { path = "crates/riina-typechecker" }

# No external dependencies (Law 8)

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
