# teras/Cargo.toml
# TERAS Workspace Root Configuration
# Version: 1.0.0
# 
# CRITICAL: This file defines the ENTIRE Rust workspace.
# ALL crates must be members of this workspace.
# NO external dependencies at runtime (Law 8).

[workspace]
resolver = "2"

members = [
    "crates/teras-core",
    "crates/teras-effect",
    "crates/teras-lang-lexer",
    "crates/teras-lang-parser",
    "crates/teras-lang-types",
    "crates/teras-lang-codegen",
    "crates/terasc",
    "crates/teras-build",
    "crates/teras-verify",
    "tools/hash-chain",
    "tools/build-manifest",
    "tools/artifact-sign",
]

# Exclude test crates from main build
exclude = [
    "tests/fuzzing",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.84.0"
license = "PROPRIETARY"
repository = "https://internal.teras.my/git/teras"
authors = ["TERAS Team <security@teras.my>"]

[workspace.dependencies]
# =============================================================================
# INTERNAL DEPENDENCIES (from workspace)
# =============================================================================
teras-core = { path = "crates/teras-core" }
teras-effect = { path = "crates/teras-effect" }
teras-lang-lexer = { path = "crates/teras-lang-lexer" }
teras-lang-parser = { path = "crates/teras-lang-parser" }
teras-lang-types = { path = "crates/teras-lang-types" }
teras-lang-codegen = { path = "crates/teras-lang-codegen" }

# =============================================================================
# BUILD-TIME ONLY DEPENDENCIES
# =============================================================================
# These are used during build/test but NOT linked into runtime binaries

# Testing
proptest = "1.4"
criterion = "0.5"
arbitrary = "1.3"

# Serialization (build-time configuration only)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Async runtime (build tools only)
tokio = { version = "1.36", features = ["full"] }

# CLI (build tools only)
clap = { version = "4.5", features = ["derive"] }

# Cryptography (hash computation)
sha2 = "0.10"

# Time
chrono = "0.4"

# =============================================================================
# RUNTIME DEPENDENCIES — ZERO EXTERNAL
# =============================================================================
# Per Law 8: ZERO third-party runtime dependencies.
# All runtime code is implemented from scratch in the workspace.

[workspace.lints.rust]
# Strictest warnings
unsafe_code = "deny"
missing_docs = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_results = "allow"  # Too noisy for now, many legitimate unused results
unused_lifetimes = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
# Enable all clippy lints (set lower priority so specific lints can override)
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
# Allow missing cargo metadata - not required for internal crates
cargo_common_metadata = "allow"
# Allow multiple versions of transitive dependencies
multiple_crate_versions = "allow"
# Allow common patterns that are acceptable in this codebase
doc_markdown = "allow"
missing_const_for_fn = "allow"
redundant_pub_crate = "allow"
option_if_let_else = "allow"
unnecessary_wraps = "allow"
struct_field_names = "allow"
use_self = "allow"
unused_self = "allow"
map_unwrap_or = "allow"
single_match_else = "allow"
too_many_lines = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
cast_possible_truncation = "allow"
if_not_else = "allow"
uninlined_format_args = "allow"
needless_borrow = "allow"
writeln_empty_string = "allow"
format_collect = "allow"
absurd_extreme_comparisons = "allow"

# Deny dangerous patterns
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
unreachable = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = true  # Keep for safety
lto = "fat"
panic = "abort"
codegen-units = 1
strip = "symbols"

[profile.test]
opt-level = 1
debug = true
debug-assertions = true
overflow-checks = true

[profile.paranoid]
inherits = "release"
overflow-checks = true
debug-assertions = true  # Enable assertions even in release
lto = "fat"
codegen-units = 1
