[package]
name = "riina-lsp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "RIINA Language Server Protocol implementation"

[dependencies]
riina-types.workspace = true
riina-lexer.workspace = true
riina-parser.workspace = true
riina-typechecker.workspace = true
