[package]
name = "teras-lang-parser"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "TERAS-LANG parser"

[dependencies]
teras-lang-lexer.workspace = true
teras-lang-types.workspace = true

[dev-dependencies]
# No external deps, standard test harness