[package]
name = "terasc"
version = "0.1.0"
edition = "2021"

[dependencies]
teras-lang-parser = { path = "../teras-lang-parser" }
teras-lang-typechecker = { path = "../teras-lang-typechecker" }
teras-lang-types = { path = "../teras-lang-types" }
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }

