[package]
name = "riina-build"
version.workspace = true
edition.workspace = true
description = "RIINA build orchestrator"

[[bin]]
name = "riina-build"
path = "src/main.rs"

[dependencies]
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tokio.workspace = true

[lints]
workspace = true
