[package]
name = "riinac"
version.workspace = true
edition.workspace = true
description = "RIINA compiler"

[[bin]]
name = "riinac"
path = "src/main.rs"

[dependencies]
riina-core.workspace = true
riina-lang-lexer.workspace = true
riina-lang-parser.workspace = true
riina-lang-types.workspace = true
riina-lang-codegen.workspace = true
clap.workspace = true

[lints]
workspace = true
