[package]
name = "teras-build"
version.workspace = true
edition.workspace = true
description = "TERAS build orchestrator"

[[bin]]
name = "teras-build"
path = "src/main.rs"

[dependencies]
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tokio.workspace = true

[lints]
workspace = true
