# tools/hash-chain/Cargo.toml
# TERAS Hash Chain Tool
# Version: 1.0.0

[package]
name = "teras-hash-chain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

description = "TERAS document hash chain management tool"

[[bin]]
name = "teras-hash-chain"
path = "src/main.rs"

[dependencies]
# CLI
clap = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Cryptography
sha2 = { workspace = true }

# Time
chrono = { workspace = true }

[dev-dependencies]
tempfile = "3.10"

[lints]
workspace = true
